Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29225

Auto indentation of newlines fails when using subscript operator [] in function call (C/C++)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 14.0.0
    • Qt Creator 8.0.0, Qt Creator 9.0.0, Qt Creator 10.0.0, Qt Creator 10.0.1
    • C/C++/Obj-C++ Support
    • None
    • Any C++ environment.
    • All
    • e43fde322 (master)

    Description

      Example:

      this->someMethod(argument0, argument1, argument2,
                       argument3, argument4); // Auto-indentation OK

      {{this->someMethod(argument0, argument1[0], argument2, // [] used.
          argument3, argument4); // Auto-indentation broken.}}

       

      This is very reproducible on all recent Qt Creator versions and, since I've been using Qt creator for about 15 years now, I know for sure that this bug is at least 5 years old, if not older.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            xxtrawurst Rafael Spring
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes