CppEditor: Fix indentation of function call arguments

... following an argument with an array subscript operator.

Fixes: QTCREATORBUG-29225
Change-Id: Iba38043d94be718efee30ce50f5b55aac4ba6ecd
Reviewed-by: Christian Stenger <christian.stenger@qt.io>