tests/auto/cplusplus/codeformatter/tst_codeformatter.cpp
@@ -107,6 +107,7 @@ private Q_SLOTS:
     void shiftWithinInitializer();
     void lambdaWithReturnType();
     void structuredBinding();
+    void subscriptOperatorInFunctionCall();
 };
 
 struct Line {
@@ -2196,6 +2197,19 @@ void tst_CodeFormatter::structuredBinding()
          << Line("    return 0;")
          << Line("}")
             ;
+    checkIndent(data);
+}
+
+void tst_CodeFormatter::subscriptOperatorInFunctionCall()
+{
+    QList<Line> data;
+    data << Line("int main() {")
+         << Line("    func(array[0],")
+         << Line("    ~    0);")
+         << Line("    func(array[i],")
+         << Line("    ~    i);")
+         << Line("}")
+        ;
     checkIndent(data);
 }
 
